<resources>
    <string name="app_name">Codewars</string>
    <string name="user_rank">Rank</string>
    <string name="user_name">Name</string>
    <string name="user_user_name">User Name</string>
    <string name="user_best_language">Best language</string>
    <string name="unknown">Unknown</string>
    <string name="completed_challenges">Completed challenges</string>
    <string name="authored_challenges">Authored challenges</string>
    <string name="retry">Retry</string>
    <string name="challenge_name">Challenge name</string>
    <string name="completed_at">Completed at</string>
    <string name="challenge_description">Description</string>
    <string name="challenge_languages">Languages</string>
    <string name="challenge_tags">Tags</string>
    <string name="order_by">Sort by</string>
    <string name="order_by_date">By date</string>
    <string name="order_by_rank">By rank</string>
    <string name="error_message" formatted="true">Oops, not funny surprise: %s</string>
    <string-array name="sort_by_array">
        <item>Date</item>
        <item>Rank</item>
    </string-array>
    <string name="search">Search</string>

</resources>
