...
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toBottomOf="@+id/sortBySpinner"
            android:layout_marginStart="@dimen/content_padding"
            android:layout_marginEnd="@dimen/content_padding"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintTop_toBottomOf="@+id/bottomSeparatorView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
